  - flac: support reading CUE sheets from remote FLAC files
* filter
  - ffmpeg: new plugin based on FFmpeg's libavfilter library
  - hdcd: new plugin based on FFmpeg's "af_hdcd" for HDCD playback
  - volume: convert S16 to S24 to preserve quality and reduce dithering noise
* output
  - jack: add option "auto_destination_ports"
  - jack: report error details
  - pulse: add option "media_role"
* switch to C++17
  - GCC 7 or clang 4 (or newer) recommended

ver 0.21.15 (2019/09/25)
* decoder
  - dsdiff, dsf: fix displayed bit rate
  - mpcdec: fix bogus ReplayGain values
* output
  - solaris: fix build with glibc 2.30

ver 0.21.14 (2019/08/21)
* decoder
  - sidplay: show track durations in database
  - sidplay: convert tag values from Windows-1252 charset
  - sidplay: strip text from "Date" tag
* player
  - fix crash after song change
  - fix seek position after restarting the decoder
* protocol
  - include command name in error responses

ver 0.21.13 (2019/08/06)
* input
  - cdio_paranoia: require libcdio-paranoia 10.2+0.93+1
* decoder
  - mad: fix crackling sound (0.21.12 regression)
* output
  - jack: improved Windows compatibility

ver 0.21.12 (2019/08/03)
* decoder
  - mad: update bit rate after seeking
  - mad: fix several bugs preventing the plugin from decoding the last frame
  - opus: ignore case in replay gain tag names
  - opus, vorbis: decode the "end of stream" packet
* output
  - jack: fix mono-to-stereo conversion
* player
  - don't restart unseekable song after failed seek attempt
* Windows
  - support backslash in relative URIs loaded from playlists

ver 0.21.11 (2019/07/03)
* input
  - tidal: deprecated because Tidal has changed the protocol
* decoder
  - wildmidi: log error if library initialization fails
* output
  - alsa: fix busy loop while draining
  - alsa: fix missing drain call
  - alsa: improve xrun-avoiding silence generator
  - alsa: log when generating silence due to slow decoder